chore(spec): close coverage gaps on 4 DRAFT specs (close-coverage-gaps WDs)
Promote engine.clustering, engine.in-process-database-engine,
query.index-types, and query.query-executor from DRAFT to APPROVED by
closing @spec annotation coverage across impl and test sites.

- engine.clustering: 114/114 (v6 → v7)
- engine.in-process-database-engine: 91/91 traced, 89 with impl+test,
  R61/R79 impl-only and documented UNTESTABLE (v3 → v4)
- query.index-types: 31/31 (DRAFT → APPROVED)
- query.query-executor: 22/22 (DRAFT → APPROVED)

Added 1 new engine test (LocalEngineTest close-continues-on-failure)
and 3 new table tests (unique supports, index-definition vector-only
similarity, ModuleBoundariesTest exported-packages). WDs WD-01 and
WD-02 in the close-coverage-gaps work group are now SPECIFIED.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>